[gd_scene load_steps=6 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://bold_outline_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/TitleScene.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture2D" id=2]
flags = 3
gradient = SubResource( 1 )
width = 84
height = 48
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 0 )

[node name="TitleScene" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 42, 24 )
texture = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 82.0
margin_bottom = 31.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b]Titleeeeee[/b]"
text = "Titleeeeee"
scroll_active = false

[node name="CreditsLabel" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 26.0
margin_right = 75.0
margin_bottom = 48.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Code:
  WjWjW"
text = "Code:
  WjWjW"
scroll_active = false

[node name="StartButtonOverlay" type="Control" parent="."]
margin_top = 41.0
margin_right = 84.0
margin_bottom = 49.0

[node name="Background2" type="ColorRect" parent="StartButtonOverlay"]
margin_right = 84.0
margin_bottom = 7.0

[node name="LevelNameLabel2" type="RichTextLabel" parent="StartButtonOverlay/Background2"]
margin_left = 1.0
margin_right = 84.0
margin_bottom = 7.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[right]Start [X][/right]"
text = "Start [X]"
scroll_active = false

[node name="CreditsTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ShowStartTimer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true
autostart = true

[connection signal="timeout" from="CreditsTimer" to="." method="_on_CreditsTimer_timeout"]
[connection signal="timeout" from="ShowStartTimer" to="." method="_on_ShowStartTimer_timeout"]
